@@ -48,6 +48,10 @@
 		<echo message="Bin: ${tomcat.bin}, Home: ${tomcat.home}" />
 		<java jar="${tomcat.bin}/bootstrap.jar" dir="${tomcat.bin}" fork="yes" spawn="true">
 			<jvmarg value="-Dcatalina.home=${tomcat.home}" />
+			<jvmarg value="-XX:PermSize=128m" />
+			<jvmarg value="-XX:MaxPermSize=512m" />
+			<jvmarg value="-Xms2048m" />
+			<jvmarg value="-Xmx4096m" />
 			<arg line="${action}" />
 		</java>
 	</target>
